--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,77 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form{
+  
+  width: 80%;
+  max-width: 600px;
+  margin: 50px auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
 }
 
-.App-link {
-  color: #61dafb;
+.form input{
+  height: 30px;
+  border-radius: 15px;
+  padding: 15px;
+  margin-top: 30px;
+  font-size: 20px;
+  border: 2px solid #000;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form input:focus{
+  outline: none;
+}
+
+.form select:focus{
+  outline: none;
+}
+
+.form button{
+
+  height: 40px;
+  width: 120px;
+  margin-top: 30px;
+  align-self: flex-end;
+  cursor: pointer; 
+
+  border-radius: 15px;
+  border: none;
+  background-color: #4caf50;
+  color: #fff;
+  transition: 0.2s all;
+}
+
+.form select{
+  height: 60px;
+  border-radius: 15px;
+  padding: 15px;
+  margin-top: 30px;
+  font-size: 20px;
+  border: 2px solid #000;
+}
+
+
+.button:focus{
+  outline: none;
+}
+
+.button:hover{ 
+  box-shadow: 3px 3px 10px 2px rgba(0,0,0,0.62);
+}
+
+.currencies{
+  width: 80%;
+  height: 400px;
+  border: 2px solid #000;
+  border-radius: 15px;
+  max-width: 600px;
+  margin: 50px auto;
+}
+
+.currencySum{
+  width: 100%;
+  height: 30px;
+  padding: 15px;
 }
