--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 .App {
   text-align: center;
+  
 }
 
+body {
+background-color: cornflowerblue;
+}
 .form{
   
   width: 80%;
@@ -9,7 +13,7 @@
   margin: 50px auto;
   display: flex;
   flex-direction: column;
-
+ 
 }
 
 .form input{
@@ -39,7 +43,7 @@
 
   border-radius: 15px;
   border: none;
-  background-color: #4caf50;
+  background-color: #8eb5e9;
   color: #fff;
   transition: 0.2s all;
 }
@@ -76,3 +80,4 @@
   height: 30px;
   padding: 15px;
 }
+
