--- a/src/components/CurrenciesSums.css
+++ b/src/components/CurrenciesSums.css
@@ -5,4 +5,12 @@
     border-radius: 15px;
     max-width: 600px;
     margin: 50px auto;
+    border: 2px solid #000;
+    background-color: white;
 }
+
+body {
+    color:white;
+
+}    
+  
