--- a/src/App.css
+++ b/src/App.css
@@ -81,3 +81,13 @@ background-color: cornflowerblue;
   padding: 15px;
 }
 
+.form sum {
+    
+  font-size: 18px;
+  border: solid 2px;
+  border-radius: 15px;
+  max-width: 600px;
+  margin: 50px auto;
+  border: 2px solid #000;
+  background-color: white;
+}
