--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,14 @@
 .App {
   text-align: center;
-  
+  padding:0;
+  margin:0;
 }
 
 body {
 background-color: cornflowerblue;
 }
+
+
 .form{
   
   width: 80%;
