--- a/src/App.css
+++ b/src/App.css
@@ -2,21 +2,22 @@
   text-align: center;
   padding:0;
   margin:0;
+  height: 5574px;
+  
 }
 
 body {
-background-color: cornflowerblue;
+  padding: 5%;
+  background-color: cornflowerblue;
 }
 
 
 .form{
-  
   width: 80%;
   max-width: 600px;
   margin: 50px auto;
   display: flex;
   flex-direction: column;
- 
 }
 
 .form input{
@@ -83,4 +84,5 @@ background-color: cornflowerblue;
   height: 30px;
   padding: 15px;
 }
+
 
