--- a/src/App.css
+++ b/src/App.css
@@ -2,22 +2,28 @@
   text-align: center;
   padding:0;
   margin:0;
-  height: 5574px;
-  
+  width: 100%;
+  height: 100%;
 }
 
 body {
   padding: 5%;
   background-color: cornflowerblue;
+  background: url('https://media.giphy.com/media/xT9IgN8YKRhByRBzMI/giphy.gif') no-repeat;
+  background-size: cover;
+  
 }
 
 
 .form{
   width: 80%;
+  padding: 5%;
   max-width: 600px;
-  margin: 50px auto;
+  margin: 200px auto;
   display: flex;
   flex-direction: column;
+  border: 1px solid lightblue;
+  box-shadow: 4px 4px 4px black;
 }
 
 .form input{
@@ -27,30 +33,38 @@ body {
   margin-top: 30px;
   font-size: 20px;
   border: 2px solid #000;
+  box-shadow: 4px 4px 4px black;
 }
 
 .form input:focus{
   outline: none;
+  box-shadow: 4px 4px 4px black;
 }
 
 .form select:focus{
   outline: none;
+  box-shadow: 4px 4px 4px black;
 }
 
-.form button{
+.form button {
 
-  height: 40px;
-  width: 120px;
+  height: 58px;
+  width: 165px;
   margin-top: 30px;
+  padding-top:1%;
+  padding-bottom: 2%;
   align-self: flex-end;
   cursor: pointer; 
-
+  font-size: 20px;
+  justify-content: center;
   border-radius: 15px;
   border: none;
   background-color: #8eb5e9;
   color: #fff;
   transition: 0.2s all;
+  box-shadow: 2px 2px 2px lightblue;
 }
+
 
 .form select{
   height: 60px;
@@ -59,11 +73,20 @@ body {
   margin-top: 30px;
   font-size: 20px;
   border: 2px solid #000;
+  box-shadow: 4px 4px 4px black;
 }
 
 
 .button:focus{
   outline: none;
+}
+
+button {
+  text-shadow: 2px 2px 2px darkblue;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-top: 4%;
+  padding-bottom: 4%;
 }
 
 .button:hover{ 
@@ -84,5 +107,4 @@ body {
   height: 30px;
   padding: 15px;
 }
-
 
